...
            android:contentDescription="Graphique de latence"/>

        <Button
            android:id="@+id/btn_launch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lancer"
            android:contentDescription="Bouton Lancer animation"/>

        <Button
            android:id="@+id/btn_change_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
